# SYSC4918

./: README.md  Research Review of Available LLMs with APIs for Technical Documentation Assistant Project.docx  SYSC4918-A2.docx  _analysis.json  cocat.txt  concat.py  data.txt  extracted_code.json  pyproject.toml  pytest.ini  requirements.txt  sample.txt  sample_project_parsed_data.json  setup.py  src.txt  src_parsed_data.json  tests.txt
sample_project/: README.md  pyproject.toml  requirements.txt  setup.py
sample_project/sample_project/: __init__.py  cli.py  config.py  main.py  models.py  utils.py
src/: README.md  __init__.py  __main__.py  alabaster_parsed_data.json  anthropic_parsed_data.json  cli.py  code_extractor.py  config.py  evaluation_results.json  llm_integration.py  main.py  project_data.json  prompt_engineering.py  readme_evaluator.py  readme_template.py  requirements.txt  sample_project_parsed_data.json  src.txt  src_parsed_data.json  utils.py
src/models/: project_data.py  project_info.py  schemas.py
src/parser/: __init__.py  basic_dependencies.py  basic_metadata.py  code_parser.py  dependency_parser.py  entry_point_parser.py  example_parser.py  metadata_parser.py  minimal_serializer.py  project_parser.py  simple_structure.py  structure_parser.py
src/parsing/: __init__.py  ast_parser.py  file_scanner.py  metadata_extractor.py  project_detector.py
src/readme_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: conftest.py  test_cli.py  test_config.py
src/tests/parser/: test_code_parser.py
src/utils/: __init__.py  content_prioritizer.py  file_utils.py  json_serializer.py  token_counter.py
src2/: code_extractor.py  output.json
